cfn_benchmark/cfn_templates/eijikominami__aws-cloudformation-templates/network/templates/az.yaml
AWSTemplateFormatVersion: 2010-09-09
Transform: AWS::Serverless-2016-10-31
Description: aws-cloudformation-templates/network/az creates a VPC Subnet and related resources.

Metadata:
  AWS::ServerlessRepo::Application:
    Name: availability-zone
    Description: Create a VPC Subnet and related resources for an Availability Zone.
    Author: Eiji KOMINAMI
    SpdxLicenseId: MIT
    LicenseUrl: s3://eijikominami-test/LICENSE
    ReadmeUrl: s3://eijikominami-test/readme/availability-zone.md
    Labels: []
    HomePageUrl: https://github.com/eijikominami/aws-cloudformation-templates
    SourceCodeUrl: https://github.com/eijikominami/aws-cloudformation-templates
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: 'AvailabilityZone Configuration'
        Parameters:
          - VPCId
          - AvailabilityZone
          - SubnetPublicCidrBlock
          - SubnetPrivateCidrBlock
          - SubnetTransitCidrBlock
          - SubnetFirewallCidrBlock
          - InternetGatewayId
          - NetworkAddressTranslation
          - NetworkLoadBalancer
      - Label:
          default: 'Notification Configuration'
        Parameters:
          - AlarmLevel
          - SNSForAlertArn
          - SNSForDeploymentArn
      - Label:
          default: 'Tag Configuration'
        Parameters:
          - LogicalName
          - Environment
          - TagKey
          - TagValue

Parameters:
  AlarmLevel:
    Type: String
    Default: NOTICE
    AllowedValues:
      - NOTICE
      - WARNING
    Description: The alarm level of CloudWatch alarms
  AvailabilityZone:
    Type: AWS::EC2::AvailabilityZone::Name
    AllowedPattern: .+
    Description: The Availability Zone name [required]
  InternetGatewayId:
    Type: String
    Default: ''
    Description: The Internet Gateway Id
  NetworkAddressTranslation:
    Type: String
    Default: DISABLED
    AllowedValues:
      - ENABLED
      - DISABLED
    Description: Enable or disable NetworkAddressTranslation (NAT) [required]
  NetworkLoadBalancer:
    Type: String
    Default: DISABLED
    AllowedValues:
      - ENABLED
      - DISABLED
    Description: Enable or disable Network LoadBalaner [required]
  SubnetPublicCidrBlock:
    Type: String
    Default: ''
    Description: The Public subnet CIDR block
  SubnetPrivateCidrBlock:
    Type: String
    Default: ''
    Description: The Private subnet CIDR block
  SubnetTransitCidrBlock:
    Type: String
    Default: ''
    Description: The transit subnet CIDR block
  SubnetFirewallCidrBlock:
    Type: String
    Default: ''
    Description: The firewall subnet CIDR block
  VPCId:
    Type: AWS::EC2::VPC::Id
    AllowedPattern: .+
    Description: The VPC id [required]
  SNSForAlertArn:
    Type: String
    Default: ''
    Description: The Amazon SNS topic ARN for alert
  SNSForDeploymentArn:
    Type: String
    Default: ''
    Description: The Amazon SNS topic ARN for deployment information
  LogicalName:
    Type: String
    Default: WebServers
    AllowedPattern: .+
    Description: The custom prefix name [required]
  Environment:
    Type: String
    Default: production
    AllowedValues:
      - production
      - test
      - development
  TagKey:
    Type: String
    Default: createdby
    AllowedPattern: .+
  TagValue:
    Type: String
    Default: aws-cloudformation-templates
    AllowedPattern: .+

Conditions:
  CreatePublicSubnet: !And [ !Not [ !Equals [ !Ref SubnetPublicCidrBlock, '' ] ], !Not [ !Equals [ !Ref InternetGatewayId, '' ] ] ]
  CreatePrivateSubnet: !Not [ !Equals [ !Ref SubnetPrivateCidrBlock, '' ] ]
  CreateTransitSubnet: !Not [ !Equals [ !Ref SubnetTransitCidrBlock, '' ] ]
  CreateFirewallSubnet: !Not [ !Equals [ !Ref SubnetFirewallCidrBlock, '' ] ]
  CreateNatGateway: !And [ !Not [ !Equals [ !Ref SubnetPublicCidrBlock, '' ] ], !Not [ !Equals [ !Ref InternetGatewayId, '' ] ], !Equals [ !Ref NetworkAddressTranslation, ENABLED ] ]
  CreateNatGatewayAlarm: !And [ !Not [ !Equals [ !Ref SubnetPublicCidrBlock, '' ] ], !Not [ !Equals [ !Ref InternetGatewayId, '' ] ], !Equals [ !Ref NetworkAddressTranslation, ENABLED ], !Not [ !Equals [ !Ref SNSForAlertArn, '' ] ], !Not [ !Equals [ !Ref SNSForDeploymentArn, '' ] ] ]
  CreateRoutePublicToInternetGateway: !And [ !Not [ !Equals [ !Ref SubnetPublicCidrBlock, '' ] ], !Not [ !Equals [ !Ref InternetGatewayId, '' ] ] ]
  CreateRouteFirewallToNatGateway: !And [ !Not [ !Equals [ !Ref SubnetFirewallCidrBlock, '' ] ], !Not [ !Equals [ !Ref SubnetPublicCidrBlock, '' ] ], !Not [ !Equals [ !Ref InternetGatewayId, '' ] ], !Equals [ !Ref NetworkAddressTranslation, ENABLED ] ]
  NetworkLoadBalancerExists: !Equals [ !Ref NetworkLoadBalancer, ENABLED ]

Resources:
  # Subnet
  SubnetPublic:
    Condition: CreatePublicSubnet
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      CidrBlock: !Ref SubnetPublicCidrBlock
      Tags:
        - Key: Name
          Value: !Sub subnet-${LogicalName}-${AvailabilityZone}-pub
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      VpcId: !Ref VPCId
  SubnetPrivate:
    Condition: CreatePrivateSubnet
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      CidrBlock: !Ref SubnetPrivateCidrBlock
      Tags:
        - Key: Name
          Value: !Sub subnet-${LogicalName}-${AvailabilityZone}-private
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      VpcId: !Ref VPCId
  SubnetTransit:
    Condition: CreateTransitSubnet
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      CidrBlock: !Ref SubnetTransitCidrBlock
      Tags:
        - Key: Name
          Value: !Sub subnet-${LogicalName}-${AvailabilityZone}-transit
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      VpcId: !Ref VPCId
  SubnetFirewall:
    Condition: CreateFirewallSubnet
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      CidrBlock: !Ref SubnetFirewallCidrBlock
      Tags:
        - Key: Name
          Value: !Sub subnet-${LogicalName}-${AvailabilityZone}-firewall
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
      VpcId: !Ref VPCId
  # Route Table
  RouteTablePublic:
    Condition: CreatePublicSubnet
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCId
      Tags:
        - Key: Name
          Value: !Sub rtb-${LogicalName}-${AvailabilityZone}-pub
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  RouteTablePublicAssociation:
    Condition: CreatePublicSubnet
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePublic
      SubnetId: !Ref SubnetPublic
  RouteTablePrivate:
    Condition: CreatePrivateSubnet
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCId
      Tags:
        - Key: Name
          Value: !Sub rtb-${LogicalName}-${AvailabilityZone}-private
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  RouteTablePrivateAssociation:
    Condition: CreatePrivateSubnet
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTablePrivate
      SubnetId: !Ref SubnetPrivate
  RouteTableTransit:
    Condition: CreateTransitSubnet
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCId
      Tags:
        - Key: Name
          Value: !Sub rtb-${LogicalName}-${AvailabilityZone}-transit
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  RouteTableTransitAssociation:
    Condition: CreateTransitSubnet
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTableTransit
      SubnetId: !Ref SubnetTransit
  RouteTableFirewall:
    Condition: CreateFirewallSubnet
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCId
      Tags:
        - Key: Name
          Value: !Sub rtb-${LogicalName}-${AvailabilityZone}-firewall
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  RouteTableFirewallAssociation:
    Condition: CreateFirewallSubnet
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTableFirewall
      SubnetId: !Ref SubnetFirewall
  # Route
  RoutePublicToInternetGateway:
    Condition: CreateRoutePublicToInternetGateway
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGatewayId
      RouteTableId: !Ref RouteTablePublic
  RouteFirewallToNatGateway:
    Condition: CreateRouteFirewallToNatGateway
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref RouteTableFirewall
  # Elastic IP
  EIPForNatGateway:
    Condition: CreateNatGateway
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref VPCId
      Tags:
        - Key: Name
          Value: !Sub eip-${LogicalName}-${AvailabilityZone}-natgateway
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  EIPForNLB:
    Condition: NetworkLoadBalancerExists
    Type: AWS::EC2::EIP
    Properties:
      Domain: !Ref VPCId
      Tags:
        - Key: Name
          Value: !Sub eip-${LogicalName}-${AvailabilityZone}-nlb
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  # NatGateway
  NatGateway:
    Condition: CreateNatGateway
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt EIPForNatGateway.AllocationId
      SubnetId: !Ref SubnetPublic
      Tags:
        - Key: Name
          Value: !Sub nat-${LogicalName}-${AvailabilityZone}
        - Key: environment
          Value: !Ref Environment
        - Key: !Ref TagKey
          Value: !Ref TagValue
  # CloudWatch Alarm
  CloudWatchAlarmNatGateway:
    Condition: CreateNatGatewayAlarm
    Type: AWS::Serverless::Application
    Properties:
      Location:
        ApplicationId: arn:aws:serverlessrepo:us-east-1:172664222583:applications/cloudwatch-alarm-about-natgateway
        SemanticVersion: 2.2.25
      NotificationARNs:
        - !Ref SNSForDeploymentArn
      Parameters:
        AlarmLevel: !Ref AlarmLevel
        CustomAlarmName: !Ref AWS::StackName
        SNSTopicArn: !Ref SNSForAlertArn
        Environment: !Ref Environment
        TagKey: !Ref TagKey
        TagValue: !Ref TagValue
      Tags:
        environment: !Ref Environment
        createdby: !Ref TagValue

Outputs:
  PublicSubnetId:
    Description: The ID of the public subnet
    Value: !If
      - CreatePublicSubnet
      - !Ref SubnetPublic
      - ''
  PrivateSubnetId:
    Description: The ID of the private subnet
    Value: !If
      - CreatePrivateSubnet
      - !Ref SubnetPrivate
      - ''
  TransitSubnetId:
    Condition: CreateTransitSubnet
    Description: The ID of the transit subnet
    Value: !If
      - CreateTransitSubnet
      - !Ref SubnetTransit
      - ''
  FirewallSubnetId:
    Description: The ID of the firewall subnet
    Value: !If
      - CreateFirewallSubnet
      - !Ref SubnetFirewall
      - ''
  NetworkLoadBalancerIPAllocationId:
    Description: The allocation ID of the Network Load Balancer IP
    Value: !If
      - NetworkLoadBalancerExists
      - !GetAtt EIPForNLB.AllocationId
      - ''
  NetworkLoadBalancerIP:
    Description: The IP address of the Network Load Balancer
    Value: !If
       - NetworkLoadBalancerExists
       - !Ref EIPForNLB
       - ''
  NatGatewayId:
    Description: The ID of the NAT gateway
    Value: !If
      - CreateNatGateway
      - !GetAtt NatGateway.NatGatewayId
      - ''
  NatGatewayIP:
    Description: The IP address of the NAT Gateway
    Value: !If
      - CreateNatGateway
      - !Ref EIPForNatGateway
      - ''
  RouteTableIdPublic:
    Description: The route table ID of the public subnet
    Value: !If
      - CreatePublicSubnet
      - !GetAtt RouteTablePublic.RouteTableId
      - ''
  RouteTableIdPrivate:
    Description: The oute table ID of the private subnet
    Value: !If
      - CreatePrivateSubnet
      - !GetAtt RouteTablePrivate.RouteTableId
      - ''
  RouteTableIdTransit:
    Description: The route table ID of the Transit Gateway
    Value: !If
      - CreateTransitSubnet
      - !GetAtt RouteTableTransit.RouteTableId
      - ''
  RouteTableIdFirewall:
    Description: The route table ID of the firewall subnet
    Value: !If
      - CreateFirewallSubnet
      - !GetAtt RouteTableFirewall.RouteTableId
      - ''
